# alpha_analysis

./: .gitignore  README.md  __init__.py  _load.py  _run_poincare.py  install_ascot.py  pyproject.toml  requirements.txt  setup.py
alpha_analysis/: __init__.py  _create_run.py  _dist5d_epitch.py  _git.py  _io_ascot_dist.py  _load.py  _logger.py  _result_item.py  _run_poincare.py  utils.py
alpha_analysis/workflow/: __init__.py  gui_poincare.py
tools/: install_ascot.sh
workflow/: run_poincare.py
