[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha_analysis"
version = "0.0.0"
description = "Small utilities for alpha analysis and Poincare plotting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "unyt",
    "xarray",
    "tqdm",
    "scipy",
    "desc-opt",
    "booz-xform",
]
[project.urls]
"Homepage" = "https://example.org/alpha_analysis"

[project.scripts]
alpha-analysis-install-ascot = "alpha_analysis.install_ascot:main"

# Explicit package discovery to ensure all modules are included when building wheels.
[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_analysis", "alpha_analysis.*"]
exclude = ["tests", "docs", "examples"]

# Optionally include package data (if later you add data files and MANIFEST.in entries)
[tool.setuptools]
zip-safe = false
